deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-chat
  namespace: ws-chat
spec:
  selector:
    app: ws-chat
  ports:
    - name: http
      port: 80
      targetPort: http
